grid-container structure for HTML redone for responsive and clarity

--- a/public/create-acc.html
+++ b/public/create-acc.html
@@ -56,8 +56,8 @@
                     <i class="fa fa-user"></i>
                   </span>
 
-                  <input id="username-input"
-
+                  <input
+                    id="username-input"
                     class="input-group-field"
                     type="text"
                     placeholder="Username"
@@ -68,8 +68,8 @@
                     <i class="fa fa-key"></i>
                   </span>
 
-                  <input id="password-input"
-
+                  <input
+                    id="password-input"
                     class="input-group-field"
                     type="password"
                     placeholder="Password"
@@ -107,7 +107,9 @@
                         </option>
                         <option value="burnley">Burnley FC</option>
                         <option value="chelsea">Chelsea FC</option>
-                        <option value="crystal-palace">Crystal Palace FC</option>
+                        <option value="crystal-palace">
+                          Crystal Palace FC
+                        </option>
                         <option value="everton">Everton FC</option>
                         <option value="fulham">Fulham FC</option>
                         <option value="leeds-united">Leeds United</option>
@@ -141,60 +143,8 @@
                       </select>
                     </label>
                   </div>
-                  <button           
-                    class="button expanded"
-                  >
-                    Submit
-                  </button>
                 </form>
               </div>
-              <div class="row columns">
-                <label
-                  >League
-                  <select id="league-input" name="status" type="text">
-                    <option value="epl">English Premier League</option>
-                  </select>
-                </label>
-              </div>
-              <div class="row columns">
-                <label
-                  >Teams
-                  <select id="teams-input" name="status" type="text">
-                    <option value="arsenal">Arsenal FC</option>
-                    <option value="aston-villa">Aston Villa FC</option>
-                    <option value="brighton">Brighton & Hove Albion FC</option>
-                    <option value="burnley">Burnley FC</option>
-                    <option value="chelsea">Chelsea FC</option>
-                    <option value="crystal-palace">Crystal Palace FC</option>
-                    <option value="everton">Everton FC</option>
-                    <option value="fulham">Fulham FC</option>
-                    <option value="leeds-united">Leeds United</option>
-                    <option value="leicester-city">Leicester City</option>
-                    <option value="liverpool">Liverpool FC</option>
-                    <option value="manchester-city">Manchester City FC</option>
-                    <option value="manchester-united">
-                      Manchester United FC
-                    </option>
-                    <option value="newcastle-united">
-                      Newcastle United FC
-                    </option>
-                    <option value="sheffield-united">
-                      Sheffield United FC
-                    </option>
-                    <option value="southampton">Southampton FC</option>
-                    <option value="tottenham-hotspur">Tottenham Hotspur</option>
-                    <option value="west-bromwich-albion">
-                      West Bromwich Albion
-                    </option>
-                    <option value="west-ham-united">West Ham United FC</option>
-                    <option value="wolverhampton-wanderers">
-                      Wolverhampton Wanderers
-                    </option>
-                  </select>
-                </label>
-              </div>
-              <!-- </form> -->
-              <!-- </div> -->
               <button class="button expanded">Submit</button>
             </form>
           </div>
