--- a/public/userpage.html
+++ b/public/userpage.html
@@ -44,7 +44,7 @@
     <section>
       <div class="grid-container">
         <div class="grid-x grid-margin-x">
-          <div class="cell large-auto">
+          <div class="cell medium-auto">
             <div class="card profile-card-action-icons">
               <div class="card-section">
                 <div class="profile-card-header">
@@ -66,10 +66,10 @@
               </div>
             </div>
           </div>
-          <div class="cell large-auto" id="futureSchedule">
+          <div class="cell medium-auto" id="futureSchedule">
             Team Schedule
           </div>
-          <div class="cell large-auto" id = "pastResults">
+          <div class="cell medium-auto" id = "pastResults">
             Most Recent games
           </div>
         </div>
