id tag added for team-search.html

--- a/public/team-search.html
+++ b/public/team-search.html
@@ -46,7 +46,7 @@
         <div class="grid-x margin-x align-center">
           <div class="cell medium-6">
             <div class="translucent-form-overlay">
-              <form>
+              <form id="sign-up-form">
                 <h3>Search for Teams</h3>
                 <div class="row columns"></div>
                 <div class="row columns">
