added code to update aboutme

--- a/public/team-search.html
+++ b/public/team-search.html
@@ -206,7 +206,7 @@
                     </div>
                   </div>
                   <div class="small-12 medium-5 columns">
-                    <button class="primary button expanded">Submit</button>
+                    <button id="about-me-button" class="primary button expanded">Submit</button>
                   </div>
                 </div>
               </form>
