HTML character case updates. li on userpage update

--- a/public/create-acc.html
+++ b/public/create-acc.html
@@ -99,44 +99,44 @@
                     <label
                       >Teams
                       <select id="teams-input" name="status" type="text">
-                        <option value="arsenal">Arsenal FC</option>
-                        <option value="aston-villa">Aston Villa FC</option>
-                        <option value="brighton">
+                        <option value="Arsenal">Arsenal FC</option>
+                        <option value="Aston-Villa">Aston Villa FC</option>
+                        <option value="Brighton">
                           Brighton & Hove Albion FC
                         </option>
-                        <option value="burnley">Burnley FC</option>
-                        <option value="chelsea">Chelsea FC</option>
-                        <option value="crystal-palace">
+                        <option value="Burnley">Burnley FC</option>
+                        <option value="Chelsea">Chelsea FC</option>
+                        <option value="Crystal-Palace">
                           Crystal Palace FC
                         </option>
-                        <option value="everton">Everton FC</option>
-                        <option value="fulham">Fulham FC</option>
-                        <option value="leeds-united">Leeds United</option>
-                        <option value="leicester-city">Leicester City</option>
-                        <option value="liverpool">Liverpool FC</option>
-                        <option value="manchester-city">
+                        <option value="Everton">Everton FC</option>
+                        <option value="Fulham">Fulham FC</option>
+                        <option value="Leeds-United">Leeds United</option>
+                        <option value="Leicester-City">Leicester City</option>
+                        <option value="Liverpool">Liverpool FC</option>
+                        <option value="Manchester-City">
                           Manchester City FC
                         </option>
-                        <option value="manchester-united">
+                        <option value="Manchester-United">
                           Manchester United FC
                         </option>
-                        <option value="newcastle-united">
+                        <option value="Newcastle-United">
                           Newcastle United FC
                         </option>
-                        <option value="sheffield-united">
+                        <option value="Sheffield-United">
                           Sheffield United FC
                         </option>
-                        <option value="southampton">Southampton FC</option>
-                        <option value="tottenham-hotspur">
+                        <option value="Southampton">Southampton FC</option>
+                        <option value="Tottenham-Hotspur">
                           Tottenham Hotspur
                         </option>
-                        <option value="west-bromwich-albion">
+                        <option value="West-Bromwich-Albion">
                           West Bromwich Albion
                         </option>
-                        <option value="west-ham-united">
+                        <option value="West-Ham-United">
                           West Ham United FC
                         </option>
-                        <option value="wolverhampton-wanderers">
+                        <option value="Wolverhampton-Wanderers">
                           Wolverhampton Wanderers
                         </option>
                       </select>
