--- a/public/userpage.html
+++ b/public/userpage.html
@@ -25,7 +25,7 @@
             <div class="top-bar-right">
               <ul class="menu simple vertical medium-horizontal">
                 <li><a href="#">Home</a></li>
-                <li><a href="team-search.html">Add Teams</a></li>
+                <li><a href="team-search.html">Update Profile</a></li>
                 <li>
                   <button id="logout-link"
                     type="button"
