essentially as done as possible

--- a/public/userpage.html
+++ b/public/userpage.html
@@ -24,8 +24,8 @@
           <div id="topbar-responsive" class="topbar-responsive-links">
             <div class="top-bar-right">
               <ul class="menu simple vertical medium-horizontal">
-                <li><a href="#">Home</a></li>
-                <li><a href="team-search.html">Update Profile</a></li>
+                <li><button id="userpage" type="button" class="button hollow topbar-responsive-button">Home</button></li>
+                <li><button id="team-search" type="button" class="button hollow topbar-responsive-button">Update Profile</button></li>
                 <li>
                   <button id="logout-link"
                     type="button"
@@ -57,7 +57,7 @@
                 </div>
                 <div class="profile-card-about">
                   <h5 class="about-title separator-left">About Me</h5>
-                  <p class="about-content">
+                  <p id="about_me" class="about-content">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Amet autem eveniet nulla quae ullam sit iure voluptatum,
                     nesciunt voluptas perferendis, minus natus in quaerat?
@@ -112,6 +112,6 @@
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
   <script src="/assets/js/logout.js"></script>
-  <script src="./assets/js/sportsapi.js"></script>
-  <script src="./assets/js/userpage.js"></script>
+  <script src="/assets/js/sportsapi.js"></script>
+  <script src="/assets/js/userpage.js"></script>
 </html>
