--- a/public/create-acc.html
+++ b/public/create-acc.html
@@ -99,44 +99,44 @@
                     <label
                       >Teams
                       <select id="teams-input" name="status" type="text">
-                        <option value="Arsenal">Arsenal FC</option>
-                        <option value="Aston-Villa">Aston Villa FC</option>
-                        <option value="Brighton">
+                        <option value="Arsenal FC">Arsenal FC</option>
+                        <option value="Aston Villa FC">Aston Villa FC</option>
+                        <option value="Brighton & Hove Albion FC">
                           Brighton & Hove Albion FC
                         </option>
-                        <option value="Burnley">Burnley FC</option>
-                        <option value="Chelsea">Chelsea FC</option>
-                        <option value="Crystal-Palace">
+                        <option value="Burnley FC">Burnley FC</option>
+                        <option value="Chelsea FC">Chelsea FC</option>
+                        <option value="Crystal Palace FC">
                           Crystal Palace FC
                         </option>
-                        <option value="Everton">Everton FC</option>
-                        <option value="Fulham">Fulham FC</option>
-                        <option value="Leeds-United">Leeds United</option>
-                        <option value="Leicester-City">Leicester City</option>
-                        <option value="Liverpool">Liverpool FC</option>
-                        <option value="Manchester-City">
+                        <option value="Everton FC">Everton FC</option>
+                        <option value="Fulham FC">Fulham FC</option>
+                        <option value="Leeds United">Leeds United</option>
+                        <option value="Leicester City FC">Leicester City</option>
+                        <option value="Liverpool FC">Liverpool FC</option>
+                        <option value="Manchester City FC">
                           Manchester City FC
                         </option>
-                        <option value="Manchester-United">
+                        <option value="Manchester United FC">
                           Manchester United FC
                         </option>
-                        <option value="Newcastle-United">
+                        <option value="Newcastle United FC">
                           Newcastle United FC
                         </option>
-                        <option value="Sheffield-United">
+                        <option value="Sheffield United FC">
                           Sheffield United FC
                         </option>
-                        <option value="Southampton">Southampton FC</option>
-                        <option value="Tottenham-Hotspur">
+                        <option value="Southampton FC">Southampton FC</option>
+                        <option value="Tottenham Hotspur FC">
                           Tottenham Hotspur
                         </option>
-                        <option value="West-Bromwich-Albion">
+                        <option value="West Bromwich Albion">
                           West Bromwich Albion
                         </option>
-                        <option value="West-Ham-United">
+                        <option value="West Ham United FC">
                           West Ham United FC
                         </option>
-                        <option value="Wolverhampton-Wanderers">
+                        <option value="Wolverhampton Wanderers FC">
                           Wolverhampton Wanderers
                         </option>
                       </select>
