--- a/public/team-search.html
+++ b/public/team-search.html
@@ -15,7 +15,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/team-search.css" />
+    <link rel="stylesheet" href="./assets/css/team-search.css" />
   </head>
   <body>
     <section>
@@ -24,8 +24,8 @@
           <div id="topbar-responsive" class="topbar-responsive-links">
             <div class="top-bar-right">
               <ul class="menu simple vertical medium-horizontal">
-                <li><a href="userpage.html">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><button id="userpage" type="button" class="button hollow topbar-responsive-button">Home</button></li>
+                <li><button id="team-search" type="button" class="button hollow topbar-responsive-button">Update Profile</button></li>
                 <li>
                   <button
                     id="logout-link"
