code is completed

--- a/public/team-search.html
+++ b/public/team-search.html
@@ -15,7 +15,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./assets/css/team-search.css" />
+    <link rel="stylesheet" href="../assets/css/team-search.css" />
   </head>
   <body>
     <section>
@@ -117,7 +117,7 @@
           </div>
           <div class="cell medium-6">
             <div class="status-update-input-box">
-              <form>
+              <form  id="about-me-button">
                 <div class="row input-box-container">
                   <div class="columns">
                     <label>
@@ -206,7 +206,7 @@
                     </div>
                   </div>
                   <div class="small-12 medium-5 columns">
-                    <button id="about-me-button" class="primary button expanded">Submit</button>
+                    <button class="primary button expanded">Submit</button>
                   </div>
                 </div>
               </form>
@@ -251,5 +251,5 @@
     </section>
   </body>
   <script src="/assets/js/logout.js"></script>
-  <script src="../assets/js/teamselect.js"></script>
+  <script src="/assets/js/teamselect.js"></script>
 </html>
